# drone-core

./: Cargo.toml  README.md
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
controls/rc/: Cargo.toml
controls/rc/src/: lib.rs
esc/: Cargo.toml
esc/src/: analog.rs  lib.rs  motor.rs
icm/: Cargo.toml
icm/src/: lib.rs  reg.rs
src/: main.rs
