[package]
name = "nucleo-f767"
authors = ["lab"]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "esc", "icm"]

[workspace.dependencies.embassy-stm32]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly", "stm32f767zi", "time-driver-any", "exti", "defmt"]

[workspace.dependencies.embassy-executor]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "integrated-timers"]

[workspace.dependencies.embassy-time]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]

[workspace.dependencies.embassy-embedded-hal]
version = "0.1.0"
git = "https://github.com/embassy-rs/embassy.git"
features = ["nightly"]

[workspace.dependencies]
common = { path = "common" }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0.0-alpha.9"

legacy-hal = { package = "embedded-hal", version = "0.2.6" }
#embedded-hal-async = "0.2.0-alpha.0"

[dependencies]
esc = { path = "esc" }
icm = { path = "icm" }

common.workspace = true
embassy-stm32.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-embedded-hal.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

nmea = {version = "0.4", default-features = false}

embedded-io = "0.4.0"
legacy-hal = { package = "embedded-hal", version = "0.2.6" }

[[bin]]
name = "nucleo-f767"

[profile.release]
codegen-units = 1
lto = true